--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "tsc"
 	},
 	"devDependencies": {
 		"@types/node": "^24.6.1",
