--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
 		"outDir": "dist",
 		"baseUrl": ".",
    		"rootDir": "./src",
-		"emitDecoratorMetadata": false,
 		"strictNullChecks": true, // this allows overriding of existing base class members without errors?
     	"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true,
 		"paths": {},
 		"strict": false,
+		"declaration": true, // Enables generation of .d.ts files
+    	"declarationMap": true, // Enables generation of .d.ts.map files for source navigation
 		"lib": [
 			"ESNext",
 			"dom"
