--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "get-logger",
+	"name": "get-loggers",
 	"version": "2.0.0",
 	"description": "Minimal API and resource usage logging functionality. Supports namespaces, colors, and options, as well as LogModules for external classes to hook into the logging system. Includes basic Logger, PerformanceLogger, and BufferedLogger.",
 	"type": "module",
@@ -16,13 +16,13 @@
 		"logging",
 		"logger"
 	],
-	"homepage": "https://github.com/rw3iss/get-logger#readme",
+	"homepage": "https://github.com/rw3iss/get-loggers#readme",
 	"bugs": {
-		"url": "https://github.com/rw3iss/get-logger/issues"
+		"url": "https://github.com/rw3iss/get-loggers/issues"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/rw3iss/get-logger.git"
+		"url": "git+https://github.com/rw3iss/get-loggers.git"
 	},
 	"author": {
 		"name": "Ryan Weiss",
